# plfs-core

./: .gitignore  BUGS  CMakeLists.txt  Changelog  KNOWN_ISSUES  Makefile  Makefile.am  Makefile.defs  Makefile.tools  README  README.POSIX  README.SRPM  README.coding  README.developer  README.git  README.hacking  README.install  README.mlog  README.release  README.svn  README.testing  VERSION  autogen.sh  configure.ac  easyconf.sh  plfs.spec  plfsrc.example  plfsrc.example.lanl  plfsrc.example2  posix_test
Modules/: FindCPPUNIT.cmake  FindHDFS.cmake  FindIOFSL.cmake  FindJNI.cmake  FindPVFS.cmake  FindYAMLCPP.cmake
ad-patches/: Makefile.am  README
ad-patches/mpich2/: README.BEN  plfs-mpich2.patch  plfs-prep-mpich2.patch
ad-patches/openmpi/: Makefile.ompi-1.4.3  README.BEN  README.BUILD  ompi-1.4.3-plfs.patch  ompi-1.4.x-plfs-prep.patch  ompi-1.6-plfs-prep.patch
ad-patches/openmpi13/: README.BEN  plfs-1.3.4.patch  plfs-prep-1.3.4.patch
ad-patches/romio13/: plfs-prep-romio-1.3.0p1.patch  plfs-romio-1.3.0p1.patch
ad_plfs/: Makefile  Makefile.am  Makefile.am.ompi  Makefile.in  Makefile.in.mpich2  README  ad_plfs.c  ad_plfs.h  ad_plfs_close.c  ad_plfs_delete.c  ad_plfs_fcntl.c  ad_plfs_flush.c  ad_plfs_hints.c  ad_plfs_open.c  ad_plfs_read.c  ad_plfs_resize.c  ad_plfs_write.c
analysis/: CMakeLists.txt  analysis.sh  analysis_slurm.sh  interactiveAnalysis.py  parallelPdfAnalysis.py  parallelPdfAnalysisMulti.py  serialAnalysis.py
config/: Makefile.am  (+10 more)
contrib/: Makefile.am
contrib/LANL/RPMs/: LANL_RPM_Building.txt  plfs-2.1.spec  sys_typ.sh
contrib/LANL/configuration_files/: README  plfs.sysconfig.cielo.compute  plfs.sysconfig.cielo.ife  plfs.sysconfig.conejo.fe  plfs.sysconfig.garnet.compute  plfs.sysconfig.red.fta  plfs.sysconfig.roadrunner.compute  plfs.sysconfig.roadrunner.fe  plfs.sysconfig.rr-dev.fe  plfs.sysconfig.rto.compute  plfs.sysconfig.rto.fe  plfs.sysconfig.smog.compute  plfs.sysconfig.smog.ife  plfs.sysconfig.yellow.fta  plfsrc.cerrillos  plfsrc.cerrillos.old  plfsrc.cielito  plfsrc.cielo  plfsrc.cielo.old  plfsrc.comment  plfsrc.conejo  plfsrc.garnet  plfsrc.garnet.old  plfsrc.hurricane  plfsrc.hurricane.old  plfsrc.lobo  plfsrc.lobo.old  plfsrc.mapache.old  plfsrc.red.fta  plfsrc.red.fta.old  plfsrc.red.mile  plfsrc.red.scratch  plfsrc.red.scratch1  plfsrc.red.scratch2  plfsrc.red.scratch3  plfsrc.red.scratch4  plfsrc.red.scratch5  plfsrc.red.scratch6  plfsrc.redtail  plfsrc.redtail.old  (+21 more)
contrib/fuse_buffer_size_change/: README.txt  fuse-chunk_size.patch.12MB  fuse-chunk_size.patch.4MB  fuse-chunk_size.patch.8MB  kernel-fuse-chunk-size.patch.12MB  kernel-fuse-chunk-size.patch.4MB  kernel-fuse-chunk-size.patch.8MB
contrib/init.d/: README  plfs.init  plfs.init.suse  plfs.sysconfig
contrib/plfsrc/: plfsrc_lanl_turq  plfsrc_lanl_yellow
contrib/syncer/: Makefile  README
contrib/syncer/etc/: example.conf
contrib/syncer/include/: Conf.hxx  CopyTask.hxx  PerfTest.h  ThreadPool.hxx
contrib/syncer/src/: CopyTask.cpp  Makefile  README  SYNcer.c  ThreadPool.cpp  inotify.cxx  monitor.cxx  monitor.hxx  rpcCopy.cxx  rpcCopy.hxx  run_viz.sh  syncer.h  syncer.x  syncer_client.c  syncer_clnt.c  syncer_server.c  syncer_svc.c  syncer_xdr.c
contrib/syncer/test/: Makefile  checkconfig.cpp  cp.cpp  test.cpp
fuse/: Makefile  Makefile.am  README  fusexx.h  main.C  plfs.init  plfs.init.suse  plfs.spec  plfs.sysconfig  plfs_fuse.cpp  plfs_fuse.h  plfsrc.example
man/: CMakeLists.txt  Makefile  Makefile.am  Makefile.commonin  plfs.1  plfsrc.5
man/man1/: dcon.1in  findmesgbuf.1in  plfs.1in  plfs_check_config.1in  plfs_flatten_index.1in  plfs_ls.1in  plfs_map.1in  plfs_query.1in  plfs_recover.1in  plfs_version.1in
man/man3/: is_plfs_file.3in  is_plfs_path.3in  plfs.3in  plfs_access.3in  plfs_buildtime.3in  plfs_chmod.3in  plfs_chown.3in  plfs_close.3in  plfs_closedir_c.3in  plfs_create.3in  plfs_debug.3in  plfs_dump_config.3in  plfs_dump_index.3in  plfs_flatten_index.3in  plfs_flush_writes.3in  plfs_get_attr.3in  plfs_get_filetype.3in  plfs_getattr.3in  plfs_getxattr.3in  plfs_index_stream.3in  plfs_invalidate_read_cache.3in  plfs_link.3in  plfs_merge_indexes.3in  plfs_mkdir.3in  plfs_mode.3in  plfs_open.3in  plfs_opendir_c.3in  plfs_query.3in  plfs_read.3in  plfs_readdir.3in  plfs_readdir_c.3in  plfs_readlink.3in  plfs_rename.3in  plfs_rmdir.3in  plfs_serious_error.3in  plfs_set_mpi.3in  plfs_setxattr.3in  plfs_stats.3in  plfs_statvfs.3in  plfs_symlink.3in  (+7 more)
man/man5/: plfsrc.5in
man/man7/: plfs.7in
scripts/analysis/: CMakeLists.txt  README  README.documentation  analysis.py  analysis.sh  analysisDataParser.c  analysisDataParser.cpp  analysisSerial.py  analysis_slurm.sh  graphingLibrary.py  interactiveAnalysis.py  parallelPdfAnalysis.py  parallelPdfAnalysisMulti.py  pdfAnalysis-multi.py  pdfAnalysis.py  plfsinterface.i
src/Plfsrc/yaml-cpp/: CMakeLists.txt
src/Plfsrc/yaml-cpp/boost/boost/: iterator.hpp  static_assert.hpp  throw_exception.hpp
src/Plfsrc/yaml-cpp/include/yaml-cpp/node/detail/: node.h  node_ref.h
src/Plfsrc/yaml-cpp/src/: collectionstack.h  node_data.cpp  ostream_wrapper.cpp  scanner.cpp  scantoken.cpp  singledocparser.cpp
src/smallfile/: FileReader.hxx  FileWriter.hxx  InMemoryCache.cpp  InMemoryCache.hxx  Makefile.am  MinimumHeap.hxx  NamesMapping.cpp  NamesMapping.hxx  RecordReader.hxx  ResourceUnit.cpp  ResourceUnit.hxx  SmallFileContainer.cpp  SmallFileIndex.hxx  SmallFileLayout.h
tests/: CMakeLists.txt  Makefile  Makefile.am  Tester.tcsh  access.C  chown.tcsh  plfsunit.cpp  plfsunit.h  posix.result  rename.C  rmdir  simple_trunc.py  smallfileunit.cpp  smallfileunit.h  truncate.py  unitmain.cpp
tools/: Makefile.am  dcon.c  findmesgbuf.c  index_distribution.py  plfs_check_config.C  plfs_check_config.cpp  plfs_flatten_index.C  plfs_flatten_index.cpp  plfs_ls  plfs_ls.C  plfs_ls.cpp  plfs_map.C  plfs_map.cpp  plfs_query.C  plfs_query.cpp  plfs_recover.C  plfs_recover.cpp  plfs_tool_common.h  plfs_tool_common.hpp  plfs_version.C  plfs_version.cpp
yaml-cpp/: CMakeLists.txt
yaml-cpp/boost/boost/: aligned_storage.hpp
(+235 files in other folders)
